--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/prashant404/NewPortfolio.git",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
